k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkjava-deployment
  labels:
    app: sparkjava
  namespace: sparkjava
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sparkjava
  template:
    metadata:
      labels:
        app: sparkjava
    spec:
      containers:
      - name: sparkjava
        image: 357898765396.dkr.ecr.ap-southeast-1.amazonaws.com/k8s-pipeline:1
        ports:
        - containerPort: 8080
